--- a/server.properties
+++ b/server.properties
@@ -15,13 +15,13 @@ snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
 enable-command-block=false
-max-players=2
+max-players=20
 network-compression-threshold=256
 resource-pack-sha1=
 max-world-size=29999984
 server-port=25565
 debug=false
-server-ip=192.168.1.130
+server-ip=
 spawn-npcs=true
 allow-flight=true
 level-name=world
@@ -31,8 +31,8 @@ spawn-animals=true
 white-list=false
 generate-structures=true
 online-mode=false
-max-build-height=256
+max-build-height=590
 level-seed=
 prevent-proxy-connections=false
 enable-rcon=false
-motd=Server ch\u00E1\u00BB\u0091ng ch\u00C3\u00A1n m\u00C3\u00B9a h\u00C3\u00A8
+motd=Server Arthur Gaming
